<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="275dp"
    android:layout_height="158dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/cutsame_edit_abandon_edit"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/subTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleView"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/cutsame_edit_tip_abandon_text_edit"
        />

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/theme_color"
        android:textSize="16sp"
        android:text="@string/cutsame_common_cancel"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/bg_ok_noselect"
        android:paddingVertical="10dp"
        />

    <TextView
        android:id="@+id/sureBtn"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="49dp"
        android:textColor="@color/text_white"
        android:textSize="16sp"
        android:text="@string/cutsame_common_abandon"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_ok_btn"
        android:paddingVertical="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>