<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".cut.preview.CutPlayerActivity">

    <Space
        android:id="@+id/glClipSurface"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="parent" />

    <SurfaceView
        android:id="@+id/clipSurface"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/controlPanel"
        app:layout_constraintTop_toTopOf="@id/glClipSurface" />

    <com.cutsame.ui.cut.videoedit.customview.CenterMaskView
        android:id="@+id/clipMask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:civLineColor="#ffffff"
        app:civLineWidth="2dp"
        app:civMaskColor="#FF0E0F1A"
        app:layout_constraintBottom_toBottomOf="@id/clipSurface"
        app:layout_constraintLeft_toLeftOf="@id/clipSurface"
        app:layout_constraintRight_toRightOf="@id/clipSurface"
        app:layout_constraintTop_toTopOf="@id/clipSurface" />

    <com.cutsame.ui.cut.videoedit.customview.gesture.VideoEditorGestureLayout
        android:id="@+id/editorGestureLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/clipSurface"
        app:layout_constraintLeft_toLeftOf="@id/clipSurface"
        app:layout_constraintRight_toRightOf="@id/clipSurface"
        app:layout_constraintTop_toTopOf="@id/clipSurface" />

    <ImageView
        android:id="@+id/playIv"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_video_playing"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/clipSurface"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/clipSurface" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controlPanel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/editPictureTipTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cutsame_edit_tip_picture_cut"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp"
            />

        <View
            android:id="@+id/base"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="26dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timeClipLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/bg_panel"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/clipTimeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginBottom="23dp"
                android:text="@string/cutsame_edit_multi_video_time_select"
                android:textColor="@android:color/white"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@id/timeSelectView"
                app:layout_constraintLeft_toLeftOf="parent" />


            <com.cutsame.ui.cut.videoedit.customview.SingleSelectFrameView
                android:id="@+id/timeSelectView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/bottomTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cutsame_edit_title_picture_cut"
            android:textColor="@color/text_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/backBtn"
            app:layout_constraintTop_toTopOf="@+id/backBtn" />

        <TextView
            android:id="@+id/sureBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:paddingHorizontal="12dp"
            android:text="@string/cutsame_common_sure"
            android:textSize="12sp"
            android:background="@drawable/bg_pick_sure"
            android:textColor="@color/text_white"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/backBtn"
            app:layout_constraintTop_toTopOf="@+id/backBtn"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>